--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,8 @@
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.2",
     "react-scripts": "1.1.4",
-    "socket.io-client": "^2.1.0"
+    "socket.io-client": "^2.1.0",
+    "universal-cookie": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -18,6 +19,4 @@
     "eject": "react-scripts eject"
   },
   "myAPI": "./socketAPI"
-
-  
 }
